--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
 							<p>Due to the skull's preservation, I assume, only the top layer crumbles, not enough to damage the piece, which is still tremendously hard and heavy, and at least thirty years old. Our uncle is said to have acquired it during dental school. ♦</p>
 				<script type="text/javascript" src="java.js"> </script>
 			</body>
+			<footer>
+				<p><a href="bulldog.html">Next</a></p>
+			  </footer>
 		</html>
