--- a/paraepi.html
+++ b/paraepi.html
@@ -8,16 +8,17 @@
 			<div id="text">
 				<h2>Parataxis / Epistaxis</h2>
 				<p id="comment"><em>... a maddening title, but to my mind the simplest and most accurate... the first word refers to a technique in poetry in which images or fragments, usually starkly dissimilar, are juxtaposed without a clear connection, while the second word simply means "nosebleed"</em></p>
-				<p>And there was a place in the copse<br>
+				<p>
+					And a poem in the new book is blue<br>
+					And at work the cyan cartridge leaks<br>
+					And a drop of acid on a flame<br>
+					&emsp;&emsp;induces a brilliant flash of color<br>
+					And there was a place in the copse<br>
 					&emsp;&emsp;we did not call a clearing<br>
 					And we did everything in miniature<br>
 					And we know that when Dad sells the house<br>
 					&emsp;&emsp;we will not return here<br>
-					And a poem in the new book is blue<br>
-					And at work the cyan cartridge leaks<br>
-					And a drop of acid on a flame<br>
-					&emsp;&emsp;creates a brilliant flash of color<br>
-					And when I first learned to drive I bled<br>
+					And the first time I left by myself I bled<br>
 					And quickly cooled and turned obsidian<br>
 				</p>
 				</div>
