--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<title>new shit...</title>
 		<body>
 			<div id="text">
-				<h2>Parataxis / Epistaxis</h2>
-				<p id="comment"><em>...a maddening title, but to my mind the simplest and most accurate... the first word refers to a technique in poetry in which images or fragments, usually starkly dissimilar, are juxtaposed without a clear connection, while the second word simply means "nosebleed"</em></p>
+				<h3>Nosebleed</h3>
 				<p>And there was a space in the copse<br>
 					&emsp;&emsp;we did not call a clearing<br>
 					And we know that when Dad sells the house<br>
