--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="paraepi_style.css">
-		<title>new shit...</title>
+		<title>ss</title>
 		<body>
 			<div id="text">
 				<h3>Nosebleed</h3>
