--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="paraepi_style.css">
+		<link rel="stylesheet" type="text/css" href="absent_style.css">
 		<title>ss</title>
 		<body>
-			<div id="text">
-				<h3>Nosebleed</h3>
-				<p>And there was a space in the copse<br>
-					&emsp;&emsp;we did not call a clearing<br>
-					And we know that when Dad sells the house<br>
-					&emsp;&emsp;we will not return here<br>
-					And a drop of acid on a flame<br>
-					&emsp;&emsp;creates a brilliant flash of color<br>
-					And a poem in the new book is blue<br>
-					And at work the cyan cartridge leaks<br>
-					And when I first learned to drive I bled<br>
-					And quickly cooled and turned obsidian<br>
-				</p>
-				</div>
+				<img src="absent.png" width="500px">
 			</body>
 		</html>
