--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <link rel="stylesheet" type="text/css" href="absent_style.css">
 		<title>ss</title>
 		<body>
-				<img src="absent.png" width="500px">
+				<a href="https://missforceful.home.blog/">miss forceful wants you</a>
 			</body>
 		</html>
