--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 	<head>
         <link rel="stylesheet" type="text/css" href="absent_style.css">
+        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 		<title>ss</title>
 		<body>
-				under construction
+				<a href="https://missforceful.home.blog/">MISS FORCEFUL WANTS YOU</a>
+
+			</div>
 			</body>
 		</html>
