--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
         <link rel="stylesheet" type="text/css" href="absent_style.css">
         <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-		<title>ss</title>
+		<title>redirecting...</title>
 		<body>
 				<a href="https://missforceful.home.blog/">MISS FORCEFUL WANTS YOU</a>
 
