--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
         <link rel="shortcut icon" href="favicon.ico">
 		<title>serena solin</title>
 		<body>
-			<p>
-				<a href="http://dreginald.com/index.php/issues/issue-sixteen/serena-solin">DREGINALD</a>
-				<a href="https://shop.exacteditions.com/fence">Fence</a>
-				<a href="https://www.foundryjournal.com/solin.html">Foundry Journal</a>
-				<a href="http://www.tammyjournal.com/">Tammy Journal</a>
-				<a href="https://www.theatlasreview.com/issue-5">The Atlas Review</a>
-</p><p>
-			<h2><a href="http://missforceful.home.blog">Miss Forceful Wants You</a></h2>
-</p><p>
-			<a href="https://issuu.com/blanktomorrow/docs/sportstomorrow">blank tomorrow</a>
-<a href="https://www.patreon.com/streetfightradio">Street Fight Radio zine</a>
+			<a href="http://missforceful.home.blog">Miss Forceful Wants You</a></h2>
 			
 			</div>
 			</body>
