--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <link rel="shortcut icon" href="favicon.ico">
 		<title>serena solin</title>
 		<body>
-			<a href="http://missforceful.home.blog">Miss Forceful Wants You</a></h2>
-			
-			</div>
+			<a href="http://missforceful.home.blog">Miss Forceful Wants You</a>
 			</body>
 		</html>
