--- a/animal.html
+++ b/animal.html
@@ -4,7 +4,7 @@
         <link rel="shortcut icon" href="favicon.ico">
 		<title>Animal vs. Animal</title>
 		<body style="background-color:darkgrey;">
-			 <iframe src="animal.pdf#toolbar=0" width="100%" height="1000px">
+			 <iframe src="Animal.pdf#toolbar=0" width="100%" height="1000px">
     </iframe>
 			</body>
 		</html>
