--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="shortcut icon" href="favicon.ico">
 		<title>serena solin</title>
 		<body>
-			<a href="http://missforceful.home.blog">Miss Forceful Wants You</a>
+			<p>TKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTK</p>
+			<p>@polysomnograph</p>
+
 			</body>
 		</html>
