--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
         <link rel="stylesheet" type="text/css" href="absent_style.css">
-        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico">
 		<title>serena solin</title>
 		<body>
-			<p>TKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTKTK</p>
-			<p>@polysomnograph</p>
-
+			<div class="title">
+				<p>serena solin</p>
+				<p>come back later</p>
+			</div>
 			</body>
 		</html>
