--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<body>
 			<div class="title">
 				<p>serena solin</p>
-				<p>come back later</p>
+				<p><a href="https://paid-leave.tumblr.com">paid-leave.tumblr.com</p>
 			</div>
 			</body>
 		</html>
