--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
         <link rel="stylesheet" type="text/css" href="absent_style.css">
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>serena solin</title>
 		<body>
 			<div class="title">
-				<p>serena solin</p>
-				<p><a href="https://paid-leave.tumblr.com">paid-leave.tumblr.com</p>
+				<p><h2>serena solin</h2></p>
+				<p><a href="https://paid-leave.tumblr.com">paid-leave.tumblr.com</a></p>
+					<p>writing at <a href="https://ghostcitypress.com/may-2019-1">Ghost City Press</a>, <a href="https://www.foundryjournal.com/solin.html">Foundry</a>, and <a href="https://www.fenceportal.org/">Fence</a></p>
+					<p>folio of midwest poetry at <a href="https://www.natbrut.com/beautiful-open-prairie">Nat. Brut</a>
+						<p>miniatures at <a href="https://drive.google.com/file/d/1ASSd5QsUKMyNXtvDBed1Dx-vd0AN2lJw/view">BUILD</a> and <a href="http://portlandreview.org/reactor-by-serena-solin/">The Portland Review</a>
+							<p>
+						<p>twitter and insta @polysomnograph</p>
 			</div>
 			</body>
 		</html>
