--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>serena solin</title>
 
 <body>
-    <div class="title">
+    <div class="text">
         <p>
-            <h2>serena solin</h2>
+            <strong>Serena Solin</strong>
         </p>
         <p>recent writing:
         <ul>
@@ -25,6 +25,6 @@
 </ul></p>
         <p>folio of midwest poetry at <a href="https://www.natbrut.com/beautiful-open-prairie"><em>Nat. Brut</em></a>
         </p>
-        <p><a href="https://instagram.com/polysomnograph">instagram</a> and lightly maintained <a href="https://paid-leave.tumblr.com">tumblr</a>
+        <p><a href="https://instagram.com/polysomnograph">instagram</a> and lightly maintained <a href="https://paid-leave.tumblr.com">tumblr</a></p>
     </div>
 </body>
