--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Serena Solin</title>
 
 <body>
-  <div class="image">  <a href="text2.html"><img src="sine.gif"/></a></div>
+  <div class="image">  <a href="info.html"><img src="sine.gif"/></a></div>
            
      </ul>
     </div>
