--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=.5">
+    <meta name="viewport" content="width=device-width, initial-scale=.9">
     <title>Serena Solin</title>
     <div class="text">
         <h3>Thanks for stopping by!</h3>
@@ -43,6 +43,7 @@
                     <li>Lightly maintained <a href="https://paid-leave.tumblr.com">Tumblr</a></li>
 
                     <li><a href="https://www.goodreads.com/user/show/46654096-serena">Goodreads</a></li>
+                    <li><a href = "mailto: ss3789990@gmail.com">Contact</a></li>
                 </ul>
             </p>
         </p>
