--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=.9">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Serena Solin</title>
     <div class="header">
         <h1 align="">Serena Solin</h1>
