--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
         <h1 align="">Serena Solin</h1>
         <h3 align=""><a href="https://no-dot-com.tumblr.com/">blog</a> // <a href="https://www.goodreads.com/user/show/46654096-serena">what I'm reading</a> // <a href="mailto: ss3789990@gmail.com">contact</a></h3></div>
         <div class="text">
-            <br>
-            Hi, I'm Serena. You can find a list of my published work below and some relevant links above. Thanks for stopping by!<br>
-            <br>
+          <p>
+            Hi, I'm Serena. You can find a list of my published work below and some relevant links above. Thanks for stopping by!</p>
             <br>
         <h3>2020</h3>
             <p>
