--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Serena Solin</title>
     <div class="frontheader">
         <h1 align="">Serena Solin</h1>
-        <h3 align=""><a href="https://no-dot-com.tumblr.com/">blog</a> // <a href="https://www.goodreads.com/user/show/46654096-serena">what I'm reading</a> // <a href="mailto: ss3789990@gmail.com">contact</a> // <a href="mywork.html">my work</a></h3></div>
+        <h3 align=""><a href="https://no-dot-com.tumblr.com/">blog</a> // <a href="https://www.goodreads.com/user/show/46654096-serena">what I'm reading</a> // <a href="contact.html">contact</a> // <a href="mywork.html">my work</a></h3></div>
         
             
             </p>
