--- a/mywork.html
+++ b/mywork.html
@@ -44,4 +44,4 @@
             
             </p>
             <br>
-            <p><h4><a href="index.html">back</a></h4></p>
+            <p><h4><a href="contact.html">about me</a> // <a href="index.html">home</a></h4></p>
