--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=.9">
     <title>Serena Solin</title>
     <div class="frontheader">
         <h1 align="">Serena Solin</h1>
