--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
         <p>Hi, I'm Serena. </p>
                 
               <p>I write mostly poetry. You can find out more about that <a href="mywork.html">here</a>. 
+              	<p>In addition, I serve on the editorial staffs of <a href="https://www.natbrut.com/"><em>Nat. Brut</em></a>, <a href="https://thequarterlessreview.com/"><em>The Quarterless Review</em></a>, and <a href="https://www.poetrynw.org"><em>Poetry Northwest</em></a>. I enjoy working on these publications and you may enjoy reading them.
         <p>Feel free to email me at <a href="mailto:ss3789990@gmail.com">ss3789990@gmail.com</a>.</p>
         <p><img src="maspeth.jpeg" alt="Maspeth is America" width="400"></p>
               <p><em>Not my image.</em></p>
