--- a/mywork.html
+++ b/mywork.html
@@ -12,6 +12,9 @@
         <h1>My Work</h1>
        
         <div class="text">
+        <h3>2021</h3>
+        <p>"Ghost Dog" at <a href="https://www.cutbankonline.org/features-1"><em>CutBank</em></a> (forthcoming)</p>
+        <br>
         <h3>2020</h3>
             <p>
                 <p>"The Courtyard" and "Double Jeopardy" at <a href="https://www.hobartpulp.com/web_features/double-jeopardy"><em>Hobart</em></a></p>
