--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
                 
               <p>I write mostly poetry. You can find out more about that <a href="mywork.html">here</a>. </p>
               	<p>I am a Notary Public in the State of New York; please email me to make an appointment.</p>
-              	<p>In addition, I serve on the editorial staffs of <a href="https://www.natbrut.com/"><em>Nat. Brut</em></a>, <a href="https://uglyducklingpresse.org/publications/second-factory-issue-two/"><em>Second Factory</em></a>, <a href="https://thequarterlessreview.com/"><em>The Quarterless Review</em></a>, and <a href="https://www.poetrynw.org"><em>Poetry Northwest</em></a>. I enjoy working on these publications and you may enjoy reading them.
+              	<p>In addition, I serve on the editorial staffs of <a href="https://www.natbrut.com/"><em>Nat. Brut</em></a>, <a href="https://uglyducklingpresse.org/publications/second-factory-issue-two/"><em>Second Factory</em></a>, and <a href="https://www.poetrynw.org"><em>Poetry Northwest</em></a>. I enjoy working on these publications and you may enjoy reading them. 
+                    <p>I'm also in the process of getting my own little operation off the ground. Find more about that <a href="annotations.html">here</a>.
         <p><a href="mailto:ss3789990@gmail.com">ss3789990@gmail.com</a></p>
         <p><img src="maspeth.jpeg" alt="Maspeth is America" width="400"></p>
               <p><em>Not my image.</em></p>
