--- a/mywork.html
+++ b/mywork.html
@@ -13,7 +13,8 @@
        
         <div class="text">
         <h3>2021</h3>
-        <p>"Ghost Dog" at <a href="https://www.cutbankonline.org/features-1"><em>CutBank</em></a> (forthcoming)</p>
+        <p>"Ghost Dog" at <a href="https://www.cutbankonline.org/features-1"><em>CutBank</em></a></p>
+        <p><em>"While": Annotations to a poem by Clark Coolidge</em>, the first in a <a href="annotations.html">series</a> by Chintz Davenport Editions (more soon!)</p>
         <br>
         <h3>2020</h3>
             <p>
