--- a/annotations.html
+++ b/annotations.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=.9">
-    <title>Annotations</title>
+    <title>Chintz Davenport Editions</title>
     <div class="header">
         <h1>Chintz Davenport Editions</h1>
        
