--- a/mywork.html
+++ b/mywork.html
@@ -14,7 +14,7 @@
         <div class="text">
         <h3>2021</h3>
         <p>"Ghost Dog" at <a href="https://www.cutbankonline.org/features-1"><em>CutBank</em></a></p>
-        <p><em>Annotations #1: While</em>, the first in a <a href="annotations.html">series</a> by Chintz Davenport Editions (forthcoming!)</p>
+        <p><em>Annotations #1: While</em>, the first in a <a href="annotations.html">series by Chintz Davenport Editions</a> (forthcoming!)</p>
         <br>
         <h3>2020</h3>
             <p>
