--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Serena Solin</title>
     <div class="frontheader">
         <h1 align="">Serena Solin</h1>
-        <h3 align=""><a href="https://paid-leave.tumblr.com/">blog</a> // <a href="https://www.goodreads.com/user/show/46654096-serena">what I'm reading</a> // <a href="contact.html">contact</a> <br> <a href="mywork.html">my work</a> // <a href="annotations.html">Chintz Davenport</a> // <a href="now.html">now</a> </h3></div>
+        <h3 align=""><a href="https://paid-leave.tumblr.com/">tumblr</a> // <a href="https://www.goodreads.com/user/show/46654096-serena">what I'm reading</a> // <a href="contact.html">contact</a> <br> <a href="mywork.html">my work</a> // <a href="annotations.html">chintz davenport</a> // <a href="now.html">now</a> </h3></div>
         
             
             </p>
