--- a/annotations.html
+++ b/annotations.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=.9">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@500&family=Linden+Hill&display=swap" rel="stylesheet">
     <title>Chintz Davenport Editions</title>
     <div class="header">
         <h1>Chintz Davenport Editions</h1>
