--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=.9">
-    <title>Serena Solin</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@500&family=Linden+Hill&display=swap" rel="stylesheet">
+<title>Serena Solin</title>
     <div class="frontheader">
         <h1 align="">Serena Solin</h1>
         <h3 align=""><a href="https://paid-leave.tumblr.com/">tumblr</a> // <a href="https://www.goodreads.com/user/show/46654096-serena">what I'm reading</a> // <a href="contact.html">contact</a> <br> <a href="mywork.html">my work</a> // <a href="annotations.html">chintz davenport</a> // <a href="now.html">now</a> </h3></div>
