--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="absent_style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=.9">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@500&family=Linden+Hill&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Unna:ital@0;1&display=swap" rel="stylesheet">
 <title>Serena Solin</title>
     <div class="frontheader">
         <p><strong>Word of the Day:</strong> lodestar<br><em>a guiding star, like the North Star</em>
